chassis/MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.19', folder: 'D:\keil\ARM\ARMCLANG\Bin'
Build target 'standard_robot'
../application/referee.c(188): error: no member named 'shooter_id1_42mm_cooling_limit' in 'ext_game_robot_state_t'
    *heat_limit = robot_state.shooter_id1_42mm_cooling_limit;
                  ~~~~~~~~~~~ ^
1 error generated.
compiling referee.c...
../application/chassis_task.c(271): error: no member named 'max_HP' in 'ext_game_robot_state_t'
    chassis_move_init->chassis_auto.auto_HP.max_HP = chassis_move_init->chassis_auto.ext_game_robot_state_point->max_HP;
                                                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~  ^
../application/chassis_task.c(272): error: no member named 'max_HP' in 'ext_game_robot_state_t'
    chassis_move_init->chassis_auto.auto_HP.cur_HP = chassis_move_init->chassis_auto.ext_game_robot_state_point->max_HP;
                                                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~  ^
../application/chassis_task.c(273): error: no member named 'max_HP' in 'ext_game_robot_state_t'
    chassis_move_init->chassis_auto.auto_HP.last_HP = chassis_move_init->chassis_auto.ext_game_robot_state_point->max_HP;
                                                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~  ^
3 errors generated.
compiling chassis_task.c...
compiling usbd_cdc_if.c...
compiling chassis_power_control.c...
compiling CAN_receive.c...
compiling referee_usart_task.c...
../application/chassis_behaviour.c(360): error: no member named 'max_HP' in 'ext_game_robot_state_t'
    chassis_judge_auto_mode->chassis_auto.auto_HP.max_HP = chassis_judge_auto_mode->chassis_auto.ext_game_robot_state_point->max_HP;
                                                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~  ^
../application/chassis_behaviour.c(362): error: no member named 'remain_HP' in 'ext_game_robot_state_t'
    chassis_judge_auto_mode->chassis_auto.auto_HP.cur_HP = chassis_judge_auto_mode->chassis_auto.ext_game_robot_state_point->remain_HP;
                                                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~  ^
2 errors generated.
compiling chassis_behaviour.c...
compiling freertos.c...
compiling main.c...
"standard_tpye_c\standard_tpye_c.axf" - 6 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:02
